[gd_scene load_steps=15 format=2]

[ext_resource path="res://Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Line2D.gd" type="Script" id=2]
[ext_resource path="res://Scripts/JumpCast.gd" type="Script" id=3]
[ext_resource path="res://Resources/Sounds/Laser.ogg" type="AudioStream" id=4]
[ext_resource path="res://Scripts/PlayerSoundManager.gd" type="Script" id=5]

[sub_resource type="CapsuleShape2D" id=1]
radius = 3.0
height = 4.0

[sub_resource type="Curve" id=5]
max_value = 5.0
_data = [ Vector2( 0.00471698, 0.263636 ), 0.0, 6.07832, 0, 0, Vector2( 0.235849, 0.954545 ), 1.92727, 1.92727, 0, 0, Vector2( 0.589623, 1.40909 ), -0.741261, -0.741261, 0, 0, Vector2( 1, 0.772727 ), -0.910101, -0.856565, 0, 0 ]

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0, 0.585635, 1 )
colors = PoolColorArray( 1, 0.4, 0.4, 1, 1, 0.419608, 0.333333, 1, 1, 0.639216, 0.639216, 1 )

[sub_resource type="Curve" id=4]
_data = [ Vector2( 0, 1 ), 0.0, -0.963636, 0, 0, Vector2( 1, 0 ), -1.26649, 0.0, 0, 0 ]

[sub_resource type="Curve" id=6]
max_value = 1.34
_data = [ Vector2( 0.598765, 0 ), 0.0, 1.77611, 0, 0, Vector2( 1, 0.694364 ), 1.90979, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=7]
offsets = PoolRealArray( 0.143345, 0.948805 )
colors = PoolColorArray( 0.0078125, 0.697693, 1, 1, 0.871094, 0.871094, 0.871094, 1 )

[sub_resource type="ParticlesMaterial" id=2]
lifetime_randomness = 1.0
emission_shape = 5
emission_ring_radius = 2.0
emission_ring_inner_radius = 0.0
emission_ring_height = 1.0
emission_ring_axis = Vector3( 0, 0, 1 )
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 100, 0 )
angular_velocity = 720.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
radial_accel = 41.18
radial_accel_random = 1.0
angle = 450.0
angle_random = 1.0
color = Color( 1, 0.4, 0.4, 1 )

[sub_resource type="Shader" id=10]
code = "/*
	Glitch Effect Shader by Yui Kinomoto @arlez80

	MIT License
*/

shader_type canvas_item;

// 振動の強さ
uniform float shake_power = 0.03;
// 振動率
uniform float shake_rate : hint_range( 0.0, 1.0 ) = 0.2;
// 振動速度
uniform float shake_speed = 5.0;
// 振動ブロックサイズ
uniform float shake_block_size = 30.5;
// 色の分離率
uniform float shake_color_rate : hint_range( 0.0, 1.0 ) = 0.01;

float random( float seed )
{
	return fract( 543.2543 * sin( dot( vec2( seed, seed ), vec2( 3525.46, -54.3415 ) ) ) );
}

void fragment( )
{
	float enable_shift = float(
		random( trunc( TIME * shake_speed ) )
	<	shake_rate
	);

	vec2 fixed_uv = SCREEN_UV;
	fixed_uv.x += (
		random(
			( trunc( SCREEN_UV.y * shake_block_size ) / shake_block_size )
		+	TIME
		) - 0.5
	) * shake_power * enable_shift;

	vec4 pixel_color = textureLod( SCREEN_TEXTURE, fixed_uv, 0.0 );
	pixel_color.r = mix(
		pixel_color.r
	,	textureLod( SCREEN_TEXTURE, fixed_uv + vec2( shake_color_rate, 0.0 ), 0.0 ).r
	,	enable_shift
	);
	pixel_color.b = mix(
		pixel_color.b
	,	textureLod( SCREEN_TEXTURE, fixed_uv + vec2( -shake_color_rate, 0.0 ), 0.0 ).b
	,	enable_shift
	);
	COLOR = pixel_color;
}
"

[sub_resource type="ShaderMaterial" id=9]
shader = SubResource( 10 )
shader_param/shake_power = 0.01
shader_param/shake_rate = 0.19
shader_param/shake_speed = 10.0
shader_param/shake_block_size = 10.0
shader_param/shake_color_rate = 0.01

[node name="Player" type="KinematicBody2D" groups=["Player"]]
z_index = 2
collision_layer = 2
collision_mask = 12
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
margin_right = 6.0
margin_bottom = 10.0
color = Color( 0, 0.811765, 1, 1 )

[node name="Square" type="Polygon2D" parent="."]
z_index = 1
color = Color( 0, 0.811765, 1, 1 )
antialiased = true
polygon = PoolVector2Array( 6, 0, 6, 10, 0, 10, 0, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 3, 5 )
shape = SubResource( 1 )

[node name="Laser" type="Line2D" parent="."]
position = Vector2( 3, 5 )
z_index = 1
points = PoolVector2Array( 0, 0, 0, 0 )
width = 8.0
width_curve = SubResource( 5 )
default_color = Color( 1, 0.4, 0.4, 1 )
gradient = SubResource( 3 )

[node name="Preview" type="Line2D" parent="."]
position = Vector2( 3, 5 )
z_index = -1
points = PoolVector2Array( 0, 0, 0, 0 )
width = 1.0
width_curve = SubResource( 4 )
default_color = Color( 1, 0.454902, 0.4, 1 )

[node name="Trail" type="Line2D" parent="."]
position = Vector2( 3, 5 )
z_index = -3
points = PoolVector2Array( 3, 5, 3, 5, 3, 5 )
width_curve = SubResource( 6 )
default_color = Color( 0.4, 0.501961, 1, 1 )
gradient = SubResource( 7 )
script = ExtResource( 2 )

[node name="Particles2D" type="Particles2D" parent="."]
position = Vector2( 3, 5 )
z_index = 5
amount = 42
speed_scale = 0.69
explosiveness = 0.27
local_coords = false
process_material = SubResource( 2 )

[node name="Timers" type="Node" parent="."]

[node name="ReloadTimer" type="Timer" parent="Timers"]
wait_time = 0.5
one_shot = true

[node name="UpdateAverageTimer" type="Timer" parent="Timers"]
wait_time = 0.1
autostart = true

[node name="Tweens" type="Node" parent="."]

[node name="ReloadTween" type="Tween" parent="Tweens"]

[node name="ShootTween" type="Tween" parent="Tweens"]

[node name="LaserRayCast" type="RayCast2D" parent="."]
position = Vector2( 3, 5 )
enabled = true
cast_to = Vector2( 0, 100 )

[node name="PreviewRaycast" type="RayCast2D" parent="."]
position = Vector2( 3, 5 )
enabled = true
cast_to = Vector2( 0, 100 )

[node name="Raycasts" type="Node2D" parent="."]
position = Vector2( 3, 5 )

[node name="JumpCast" type="RayCast2D" parent="Raycasts"]
position = Vector2( 0, 5 )
enabled = true
cast_to = Vector2( 0, 3 )
script = ExtResource( 3 )

[node name="PlayerSounds" type="Node" parent="."]
script = ExtResource( 5 )

[node name="LaserSound" type="AudioStreamPlayer" parent="PlayerSounds"]
stream = ExtResource( 4 )
volume_db = -22.723
mix_target = 2

[node name="GlitchShader" type="ColorRect" parent="."]
visible = false
material = SubResource( 9 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -960.0
margin_top = -540.0
margin_right = 960.0
margin_bottom = 540.0

[connection signal="shooting_started" from="." to="PlayerSounds" method="_on_Player_shooting_started"]
[connection signal="shooting_stopped" from="." to="PlayerSounds" method="_on_Player_shooting_stopped"]
[connection signal="timeout" from="Timers/ReloadTimer" to="." method="_on_ReloadTimer_timeout"]
[connection signal="timeout" from="Timers/UpdateAverageTimer" to="." method="_on_UpdateAverageTimer_timeout"]
